# reactos

./: configure.cmd
.github/workflows/: build.yml
base/applications/mmc/: CMakeLists.txt  mmc.c  precomp.h
base/applications/msconfig/: msconfig.c
base/applications/mscutils/: CMakeLists.txt  compmgmt.msc  devmgmt.msc  eventvwr.msc  services.msc
base/applications/mspaint/: canvas.cpp  canvas.h  drawing.cpp  palette.cpp  palettemodel.cpp  palettemodel.h  toolsmodel.cpp  toolsmodel.h
base/applications/rapps/: appdb.cpp  appinfo.cpp  appview.cpp  configparser.cpp  geninst.cpp  gui.cpp  loaddlg.cpp  misc.cpp  settings.cpp  settingsdlg.cpp  unattended.cpp
base/services/seclogon/: CMakeLists.txt  rpcserver.c
base/services/umpnpmgr/: rpcserver.c
base/services/wkssvc/: domain.c  rpcserver.c
base/setup/lib/: bootsup.c  setuplib.c
base/setup/usetup/: usetup.c
base/shell/cmd/: choice.c
base/shell/explorer/: appbar.cpp  explorer.cpp  notifyiconscust.cpp  precomp.h  syspager.cpp  taskswnd.cpp  tbsite.cpp  trayclock.cpp  traywnd.cpp
boot/: remaster.cmd
boot/bootdata/: CMakeLists.txt  hivecls.inf
boot/bootdata/bootcd/: unattend.inf
dll/appcompat/apphelp/: sdbfileattr.c
dll/cpl/desk/: appearance.c
dll/ntdll/def/: ntdll.spec
dll/ntdll/nt_0600/: ntdll_vista.spec
dll/shellext/cabview/: cabview.cpp  cabview.h  cabview.rc  (+4 more)
modules/rostests/apitests/pefile/: CMakeLists.txt  delayload.c  testlist.c
ntoskrnl/: CMakeLists.txt  ntoskrnl.spec
ntoskrnl/cc/: view.c
ntoskrnl/ex/: sysinfo.c
ntoskrnl/fsrtl/: name.c
ntoskrnl/ntkrnlmp/: CMakeLists.txt
(+420 files in other folders)
